<resources>

    <string name="app_name">Bread Time</string>
    <string name="app_name_main">Feed de Notícias</string>
    <string name="app_name_notification">Notificações</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="notifications">Notificações</string>
    <string name="bread_notification">Fornada</string>
    <string name="promo_notification">Promoções</string>
    <string name="products_notification">Produtos</string>
    <string name="recipe_notification">Receitas</string>
    <string name="post">Post</string>

    <string name="feed">Feed de Notícias</string>
    <string name="gallery">Galeria de Produtos</string>
    <string name="delivery">Encomendas</string>
    <string name="restaurant">Cardápio</string>
    <string name="about">Informações</string>
    <string name="about_app">Sobre o aplicativo</string>
    <string name="search">Pesquisar</string>

    <string name="imageDesc">Imagem do Post</string>
    <string name="shareDesc">Compartilhar o Post</string>
    <string name="favDesc">Favoritar o Post</string>
    <string name="postAuthor"> Por </string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
