<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorDivider"
    tools:context="com.bread.time.breadtime.ConfigActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/relativeLayout1"
        android:background="@color/colorWhite"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bread_notification"
            android:id="@+id/switch_bread_notification"
            android:textColor="@color/colorSecondaryText"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/relativeLayout2"
        android:layout_below="@id/relativeLayout1"
        android:background="@color/colorWhite"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/promo_notification"
            android:id="@+id/switch_promo_notification"
            android:textColor="@color/colorSecondaryText"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/relativeLayout3"
        android:layout_below="@id/relativeLayout2"
        android:background="@color/colorWhite"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recipe_notification"
            android:id="@+id/switch_recipe_notification"
            android:textColor="@color/colorSecondaryText"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="38dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:id="@+id/relativeLayout4"
        android:layout_below="@id/relativeLayout3"
        android:background="@color/colorWhite"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp">

        <Switch
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/products_notification"
            android:id="@+id/switch_products_notification"
            android:textColor="@color/colorSecondaryText"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="52dp"
            android:layout_centerInParent="true"/>
    </RelativeLayout>

</RelativeLayout>
